# rust_big_fractals

./: .gitignore  Cargo.toml  shader.wgsl
renderer/: Cargo.toml
renderer/shaders/: main.wgsl  mandelbulb_and_white_ball.wgsl
renderer/shaders/menger_sponge/: general_view.wgsl  include.wgsl
renderer/src/: lib.rs  main.rs  renderer.rs  shader_prep.rs
src/: app.rs  format.rs  lib.rs  main.rs  renderer.rs  shader.wgsl  shader_prep.rs
src/format/: utils.rs
viewer/: Cargo.toml
viewer/src/: app.rs  format.rs  lib.rs  main.rs  shader.wgsl
viewer/src/format/: utils.rs
