[package]
name = "big_image_viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.13.1"
image = "0.24.6"
rayon = "1.7.0"
tokio = { version = "1.28.1", features = ["rt"] }
wgpu = "0.16.0"
winit = "0.28.6"
